Bug 860213 - Use async version of set metadata. r=Neil